tests/idris2/basic018/expected
1/1: Building Fin (Fin.idr)
Error: While processing right hand side of bar. Can't find an implementation for IsJust (integerToFin 8 5).

Fin:34:7--34:8
 30 | foo : Fin 5
 31 | foo = 3
 32 | 
 33 | bar : Fin 5
 34 | bar = 8
            ^

